# 2026-02-http2-perf

./: .gitignore  README.md  go.mod  go.sum
cmd/gencert/: main.go
cmd/gohttp1/: measure.go  serve.go
cmd/gohttp2/: measure.go  serve.go
cmd/gohttp2c/: main.go  measure.go  serve.go
cmd/lxs/: destroy.go  gohttp1.go  gohttp2.go  gohttp2c.go  main.go  ndt7.go  rusthttp2.go
cmd/ndt7/: measure.go  proto.go
cmd/rusthttp2/: Cargo.toml
cmd/rusthttp2/src/: main.rs
internal/slogging/: slogging.go
